# tpu-learning

./: README.md  pyproject.toml
benchmarking/: forward_benchmark.py  run_forward_benchmarks.py  utils.py
commands/: run_on_ray.sh
communication/: profiling.py  tpu_fun.ipynb
data/mapreduce/: client.py  coordinator.py  worker.py
data/mapreduce/tmp-map/: mr-0-0.json  mr-1-1.json
haliaxdev/layers/: attention.py
jaxmlbook/: 3_sharded_mm.ipynb  4_transformers.ipynb  5_training.ipynb
kernels/: vadd.py
partitioning/flax/: attention.py  mlp.py  moe.py  paged_attention.py
partitioning/haliax/: mlp.py
practice_stack/: file.txt  file2.txt
rooflines/: 0_rooflines.ipynb  2_tpus.ipynb
scripts/ray/: cluster.py  dev_tpu.py
src/communication/: tpu.ipynb
src/data/: buffered_write.py  write_jsonl.py  write_parquet.py  write_parquet_cloud.py
src/haliaxdev/layers/: mlp.py
src/kernels/: matmul.py
src/partitioning/analysis/: moe_understanding.ipynb  visualize_rope.ipynb
src/partitioning/flax/: mlp.py  moe.py  rope.py
tests/attention/: test_ragged_paged_attention.py
tests/haliaxdev/: test_attention.py  test_mlp.py
tests/partitioning/flax/: test_attention.py
tpu_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
